@@ -2,7 +2,7 @@ package com.contexto.context;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.List;
+import java.util.Arrays;
 
 import org.junit.jupiter.api.Test;
 
@@ -12,18 +12,17 @@ class FileTreeRendererTest {
 
     @Test
     void rendersDirectoriesBeforeFilesWithTreeConnectors() {
-        String tree = renderer.render(List.of(
+        String tree = renderer.render(Arrays.asList(
                 "pom.xml",
                 "src/main/App.java",
                 "src/main/util/Strings.java"));
 
-        assertThat(tree).isEqualTo("""
-                ├── src/
-                │   └── main/
-                │       ├── util/
-                │       │   └── Strings.java
-                │       └── App.java
-                └── pom.xml
-                """);
+        assertThat(tree).isEqualTo(
+                "├── src/\n"
+                + "│   └── main/\n"
+                + "│       ├── util/\n"
+                + "│       │   └── Strings.java\n"
+                + "│       └── App.java\n"
+                + "└── pom.xml\n");
     }
 }
